# tao-sentinel

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
deploy/: README.md  sentinel.example.yaml
deploy/nginx/: tao-sentinel-tls.conf  tao-sentinel.conf
frontend/: index.html  measure.mjs  measure2.mjs  measure3.mjs  measure4.mjs  measure5.mjs  measure6.mjs  measure7.mjs  measure8.mjs  package-lock.json  package.json  vite.config.ts
frontend/scripts/: measure-layout.mjs
frontend/src/: index.css  main.tsx
frontend/src/components/: AlertsPanel.tsx  Delta.tsx  GradeBadge.tsx  PortfolioPanel.tsx  PriceChart.tsx  Sparkline.tsx  StatCards.tsx  SubnetsTable.tsx  TopBar.tsx  WatchlistStrip.tsx  icons.tsx  ui.ts
frontend/src/lib/: api.ts  format.ts  useMediaQuery.ts
frontend/src/pages/: Dashboard.tsx  Subnet.tsx
tao_sentinel/: __init__.py  api.py  cli.py  config.py  models.py  portfolio.py  scanner.py
tao_sentinel/alerts/: __init__.py  engine.py  notify.py  rules.py
tao_sentinel/web/: __init__.py  app.py
tao_sentinel/web/templates/: dashboard.html  subnet.html
tests/: conftest.py  test_api.py  test_cli.py  test_config.py  test_engine.py  test_portfolio.py  test_rules.py  test_scanner.py  test_web.py
